// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-svelte > should add svelte loader properly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": true,
              },
              "emitCss": true,
              "hotReload": true,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "browser",
      "import",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should set dev and hotReload to false in production mode 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "browser",
      "import",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should turn off hmr by hand correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "browser",
      "import",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;
